checkIdIndexExists uses getAllIndexes() wrong

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • None
    • Affects Version/s: None
    • Component/s: None
    • Storage Execution
    • Fully Compatible
    • ALL
    • Execution Team 2024-08-05
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      checkIdIndexExists in startup_recovery misunderstands the interface to getAllIndexes(), and ends up creating an array with a bunch of empty strings followed by the actual indexes. This still works and this code isn't performance critical, but we should fix it anyway.

            Assignee:
            Daisy Kucharski
            Reporter:
            Matthew Russotto (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: