SERVER-91978 fix checkIdIndexExists use of getAllIndexes (#25554)

GitOrigin-RevId: 45005f3e782e7b125fa6d67f8acb43bf42028529